@startuml
skinparam classAttributeIconSize 0

abstract class User {
    # String id
    # String email
    # String password
    # String fullName
    + User(String id, String email, String password, String fullName)
    + boolean login(String email, String password)
    + void logout()
    + String getFullName()
    + String getEmail()
}

class JobSeeker {
    - String resumeUrl
    - List<String> skills
    + JobSeeker(String id, String email, String password, String fullName)
    + void uploadResume(String url)
    + void addSkill(String skill)
    + Application applyToJob(JobPosting job)
    + List<String> getSkills()
}

class Employer {
    - String companyName
    - List<JobPosting> postedJobs
    + Employer(String id, String email, String password, String fullName, String companyName)
    + JobPosting postJob(String title, String description, double salary)
    + void reviewApplication(Application app, String status)
    + List<JobPosting> getPostedJobs()
}

class JobPosting {
    - String id
    - String title
    - String description
    - double salary
    - Employer employer
    - List<Application> applications
    - String status
    + JobPosting(String id, String title, String description, double salary, Employer employer)
    + void addApplication(Application app)
    + List<Application> getApplications()
    + String getDetails()
}

class Application {
    - String id
    - JobSeeker applicant
    - JobPosting job
    - String status
    - Date appliedDate
    + Application(String id, JobSeeker applicant, JobPosting job)
    + void updateStatus(String status)
    + String getStatus()
    + String getSummary()
}

User <|-- JobSeeker
User <|-- Employer
Employer "1" -- "*" JobPosting : creates >
JobSeeker "1" -- "*" Application : creates >
JobPosting "1" -- "*" Application : receives >
@enduml
